fix api key